dataset1235/2025-2/2868285114/users/3240599857/executions/2135592949_854576230.log
== RUN (2025-08-12 23:18:05)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper(Ava Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:15:52)
-- CODE: 
frase = ""
print(upper(ada lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(ada lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(ada lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:17:38)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper("Ava Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ava Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ava Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:18:06)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper(Ava Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:39)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper(Ada Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ada Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ada Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:15:50)
-- CODE: 
frase = ""
print(upper(ada lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(ada lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(ada lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:21:53)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:20:56)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
#print(upper("Ada Lovelace foi a primeira programadora da historia"))
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:10)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper(Ava Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:21:21)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
#print(upper("Ada Lovelace foi a primeira programadora da historia"))
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:21:54)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:22:07)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:15)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper( Ava Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper( Ava Lovelace foi a primeira programadora da historia))
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper( Ava Lovelace foi a primeira programadora da historia))
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:22:05)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:18:50)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper("Ada Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:21:52)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:48)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper("Ada Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:38)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper(Ada Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ada Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ada Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:07)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper(Ava Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(upper(Ava Lovelace foi a primeira programadora da historia))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:17:35)
-- CODE: 
frase = "Ava Lovelace foi a primeira programadora da historia"
print(upper("Ava Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ava Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ava Lovelace foi a primeira programadora da historia"))
          ^^^^^
NameError: name 'upper' is not defined. Did you mean: 'super'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:21:55)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:21:05)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
#print(upper("Ada Lovelace foi a primeira programadora da historia"))
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
